Обновление по ТЗ 5 спринта, написание тестов в процессе Work 07.05.2025